--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
-node_modules/
-.env
+
+# Created by https://www.gitignore.io/api/web,macos,java-web
+# Edit at https://www.gitignore.io/?templates=web,macos,java-web
+
+### Java-Web ###
+## ignoring target file
+target/
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### Web ###
+*.asp
+*.cer
+*.csr
+*.css
+*.htm
+*.html
+*.js
+*.jsp
+*.php
+*.rss
+*.xhtml
+
+# End of https://www.gitignore.io/api/web,macos,java-web
